# terraform-module-azure-snowflake

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: README.md  main.yaml  pr.yaml  tag.yaml
tf/: README.md  backend.tf  main.tf  modules.tf  provider.tf  variables.tf  versions.tf
tf/azure/: edge.tf  import.tf  iot_hub.tf  locals.tf  main.tf  ml_workspace.tf  modules.tf  output.tf  variables.tf
tf/azure/iot_hub/: event_grid.tf  import.tf  locals.tf  main.tf  storage_account.tf  storage_containers.tf  variables.tf
tf/azure/ml_workspace/: application_insights.tf  container_registry.tf  key_vault.tf  locals.tf  main.tf  storage_accounts.tf  variables.tf
tf/backend/: prod.tfvars  staging.tfvars
tf/snowflake/: file_format.tf  integrations.tf  locals.tf  main.tf  pipes.tf  provider.tf  stages.tf  tables.tf  variables.tf
tf/vars/: prod.tfvars  staging.tfvars
